修复经费报销Bug

--- a/FTWeb/ViewV5/index.html
+++ b/FTWeb/ViewV5/index.html
@@ -28,7 +28,7 @@
         <div class="header box-shadow">
             <div class="head-center clearfix">
                 <div class="logo c666 pull-left">
-                    <img ms-attr-src="/ViewV5/Base/DownFile.aspx?fileId={{CompanyData.LogoID}}" onerror="javascript: this.src = 'images/logo.png'" style="max-height: 40px; margin-right: 10px;">{{CompanyData.QYName}}
+                    <img ms-attr-src="/ViewV5/Base/DownFile.aspx?fileId={{CompanyData.LogoID}}" onerror="javascript: this.src = '/ViewV5/images/logo.png'" style="max-height: 40px; margin-right: 10px;">{{CompanyData.QYName}}
                 </div>
                 <div class="pull-right top-fun">
                     <ul class="clearfix">
@@ -50,7 +50,7 @@
                                 <i class="iconfont icon-erweima tip" data-toggle="tooltip" title="扫描关注" data-placement="bottom"></i>
                             </a>
                             <div class="dropdown-menu animated fadeInRight" style="overflow: auto; width: 200px; text-align: center">
-                                <img width="100%" ms-attr-src="CompanyData.wxqrcode">
+                                <img width="100%" src = '/ViewV5/images/qrcode.jpg'>
                                 扫描二维码，关注企业号
                             </div>
                         </li>
