--- a/FTWeb/login.html
+++ b/FTWeb/login.html
@@ -171,7 +171,7 @@
                 <b class="sm" style="line-height:29px;">扫描二维码关注企业号</b>
                 <div class="erweima_pic" style="display:none">
                     <span class="sanjiao"></span>
-                    <img src="/ViewV5/web/images/weixin1.png" id="qyewm" style="top:8px;position:absolute;z-index:33333">
+                    <img src="/ViewV5/images/qrcode.jpg" id="qyewm" style="top:8px;position:absolute;z-index:33333">
                 </div>
             </div>
 
@@ -241,6 +241,12 @@
                                     <img src="/ViewV5/web/login/lock.png" width="13" height="15" class="user-img">
                                     <input class="youxiang-no mm" type="password" autocomplete="off" placeholder="请输入密码" id="password" name="password">
                                 </p>
+                                <p class="login-p2">
+                                    <input class="youxiang-no mm" type="text" autocomplete="off" placeholder="请输入验证码" style="width:60%" id="chkcode" name="chkcode">
+                                    <label style="float:right;width:30%;height:100%;">
+                                        <img src="/Viewv5/Base/YZMCode.aspx" style="width: 100%; height: 100%;padding:1px;" onclick="changecode(this)">
+                                    </label>
+                                </p>
                                 <span class="help-block" for="password" style="color:red;"></span>
                                 <p class="login-check" style="margin-top:20px;">
                                     <label class="fl rememberme check">
@@ -294,7 +300,7 @@
                     }
                     e.preventDefault();
                     $(".uppercase").text("正在登陆")
-                    $.getJSON('/API/VIEWAPI.ashx?Action=Commanage_LOGIN', { "password": $("#password").val(), "UserName": $("#username").val(), "ComID": ComID }, function (resultData) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=Commanage_LOGIN', { "password": $("#password").val(), "UserName": $("#username").val(), "ComID": ComID, "chkcode": $("#chkcode").val() }, function (resultData) {
                         if (resultData.ErrorMsg == "") {
                             ComFunJS.setCookie('szhlcode', resultData.Result);
                             location.href = "/ViewV5/index.html";
@@ -325,7 +331,9 @@
                     $(".uppercase").trigger('click');
                 }
             }
-        
+            function changecode(obj) {
+                $(obj).attr("src", "/Viewv5/Base/YZMCode.aspx?r=" + Math.random());
+            }
 
         </script>
         <script>
