--- a/FTWeb/ViewV5/AppPage/KSGL/TKLIST.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/TKLIST.html
@@ -1,7 +1,28 @@
 ﻿<div ms-controller="TKFLLIST">
     <!-- 添加按钮 -->
     <div class="btn-add">
-        <button type="button" class="btn btn-info btn-lg" ms-click="AddView('KSGL_TKFL')"><i class="iconfont icon-jiahao ft12 mr5"></i>添加题库分类</button>
+        <button type="button" class="btn btn-info btn-lg" ms-click="AddView('KSGL_TKGL')"><i class="iconfont icon-jiahao ft12 mr5"></i>添加题库</button>
+    </div>
+    <!-- 按条件选择 -->
+    <div class="tab-filter-type">
+        <div class="oh">
+            <h5 class="pull-left tr">题库分类：</h5>
+            <ul class="tab-type ft14">
+                <li ms-click="SelectType('')"><span class="active">全部</span></li>
+                <li ms-repeat-el="TypeData" ms-click="SelectType(el.ID)"><span>{{el.TKFLName}}</span></li>
+            </ul>
+        </div>
+        <!-- 搜索 -->
+        <div class="oh">
+            <div class="input-group ml15" style="width:295px;">
+                <input type="search" class="form-control" ms-duplex="search.searchcontent" placeholder="搜索题库名称">
+                <span class="input-group-addon" ms-click="GetLIST()">搜索</span>
+            </div>
+        </div>
+    </div>
+    <!-- 展开更多选项 -->
+    <div class="add-tab ft14 tc mt20" style="display:none;">
+        <span>更多筛选<i class="caret"></i></span>
     </div>
     <!-- 按条件选择 -->
     <!-- 表格 -->
@@ -10,10 +31,11 @@
             <thead>
                 <tr>
                     <th class="tc">
-                        序号
+                        题库名称
                     </th>
-                    <th>分类名称</th>
-                    <th>分类描述</th>
+                    <th>题库分类</th>
+                    <th>题库描述</th>
+                    <th>题库状态</th>
                     <th>添加人</th>
                     <th>添加时间</th>
                 </tr>
@@ -23,17 +45,22 @@
                     <td class="tc">
                         {{$index+1+page.pagecount*(page.pageindex-1)}}
                     </td>
+                    <td>{{el.TKName}}</td>
                     <td>{{el.TKFLName}}</td>
-                    <td>{{el.Remark}}</td>
+                    <td>{{ComFunJS.convstr(el.TKDescribe)}}</td>
+                    <td>{{el.Status}}</td>
                     <td>{{ComFunJS.convertuser(el.CRUser) }}</td>
                     <td>{{el.CRDate|date('yyyy-MM-dd')}}</td>
                     <td>
                         <span class="btn-click">
-                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-if="el.CRUser==userName" ms-click="AddView('KSGL_TKFL','题库分类编辑',el.ID,$event)">
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-if="el.CRUser==userName" ms-click="AddView('KSGL_TKGL','题库编辑',el.ID,$event)">
                                 <i class="iconfont icon-bianji"></i>
                             </a>
-                            <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-if="el.CRUser==userName" ms-click="DELTKFL(el,$event)">
+                            <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-if="el.CRUser==userName" ms-click="DeleteView(el,$event)">
                                 <i class="iconfont icon-shanchu"></i>
+                            </a>
+                            <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="试题管理" ms-click="ChangeMenu(el)">
+                                <i class="iconfont icon-bianji"></i>
                             </a>
                         </span>
                     </td>
@@ -76,15 +103,22 @@
             tempindex.GetLIST();
         },
         InitWigetData: function () {
+
+            $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETTKFLSEL', function (resultData) {
+                if (resultData.ErrorMsg == "") {
+                    model.TypeData = resultData.Result;
+
+                }
+            })
             tempindex.GetLIST();
-        },
-        addTKFL: function () {
-            top.ComFunJS.winviewform("/ViewV5/Base/APP_TKFL_SEL.html?r=" + Math.random(), "题库分类", "1000", "");
+        }, ChangeMenu: function (el) { 
+            model.initobj = el.ID;
+            model.PageCodeRdm = "AppPage/KSGL/TKSTLIST.html?r=" + model.rdm; 
         },
         GetLIST: function () {
             model.page.pageindex = 1;
             model.ListData.clear();
-            $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETTKFLLIST', { p: 1, P1: model.search.seartype, pagecount: model.page.pagecount, Content: model.search.searchcontent }, function (resultData) {
+            $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETTKGLLIST', { p: 1, P1: model.search.seartype, pagecount: model.page.pagecount, Content: model.search.searchcontent }, function (resultData) {
                 if (resultData.ErrorMsg == "") {
                     model.ListData = resultData.Result;
                     if (model.ListData.size() == 0) { model.isnull = true; } else { model.isnull = false; }
@@ -96,7 +130,7 @@
                         skin: 'molv',
                         jump: function (e) { //触发分页后的回调
                             if (e.curr != model.page.pageindex) {
-                                $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETTKFLLIST', { p: e.curr, P1: model.search.seartype, pagecount: model.page.pagecount, Content: model.search.searchcontent }, function (resultData) {
+                                $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETTKGLLIST', { p: e.curr, P1: model.search.seartype, pagecount: model.page.pagecount, Content: model.search.searchcontent }, function (resultData) {
                                     if (resultData.ErrorMsg == "") {
                                         model.ListData = resultData.Result;
                                     }
@@ -107,19 +141,18 @@
                     });
                 }
             })
-        }, DELTKFL: function (el, event) {
-            if (event) {
-                event.stopPropagation();
-            }
-            ComFunJS.winconfirm("确认要删除吗？", function () {
-                $.getJSON("/API/VIEWAPI.ashx?Action=KSGL_DELTKFL", { P1: el.ID }, function (r) {
-                    if (r.ErrorMsg == "") {
-                        model.ListData.remove(el);
-                        ComFunJS.winsuccess("操作成功");
+        }, DeleteView: function (item, event) {
+            top.ComFunJS.winconfirm("删除此题库，此题库下的试题将被删除,确认要删除此题库吗", function () {
+                $.post('/API/VIEWAPI.ashx?Action=KSGL_DELETETKGL', { "P1": item.ID }, function (result) {
+                    result = JSON.parse(result)
+                    if (result.ErrorMsg == "") {
+                        top.ComFunJS.winsuccess("删除成功");
+                        model.ListData.remove(item);
+                    } else {
+                        top.ComFunJS.winwarning(result.ErrorMsg);
                     }
                 })
             }, function () { })
-
         }
     })
 </script>
