--- a/FTWeb/ViewV5/AppPage/KSGL/TKSTLIST.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/TKSTLIST.html
@@ -10,7 +10,10 @@
             curKnowLedge: "",
             curLevel: "",
             curType: "",
-            TKSTData: [],
+            TKSTData: [], selNum: function (item) {    //选择显示的条数
+                model.page.pagecount = item;
+                tempindex.GetTKST();
+            },
             InitWigetData: function (strId) {
                 tempindex.tkID = strId;
                 $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETKNOWLEDGE', { P1: tempindex.tkID }, function (result) {
@@ -28,7 +31,7 @@
             },  ImportTKST: function () {
                 top.ComFunJS.winviewform('/ViewV5/AppPage/KSGL/TKSTExport.html?tkid=' + tempindex.tkID, "试题导入", "750", "300");
             }, Total: 0, GetTKST: function () {
-                $.getJSON("/API/VIEWAPI.ashx?Action=KSGL_GETTKSTLIST", { p: 1, ParamData: tempindex.curKnowLedge, P2: tempindex.curType, level: tempindex.curLevel, tkid: tempindex.tkID }, function (result) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=KSGL_GETTKSTLIST", { p: 1, ParamData: tempindex.curKnowLedge, P2: tempindex.curType, level: tempindex.curLevel, tkid: tempindex.tkID,count:model.page.pagecount }, function (result) {
                     if (result.ErrorMsg == "") {
                         tempindex.TKSTData = result.Result;
                         tempindex.Total = result.Result2;
@@ -40,7 +43,7 @@
                             skin: 'molv',
                             jump: function (e) { //触发分页后的回调
                                 if (e.curr != page) {
-                                    $.getJSON("/API/VIEWAPI.ashx?Action=KSGL_GETTKSTLIST", { p: e.curr, ParamData: tempindex.curKnowLedge, P2: tempindex.curType, level: tempindex.curLevel, tkid: tempindex.tkID }, function (result) {
+                                    $.getJSON("/API/VIEWAPI.ashx?Action=KSGL_GETTKSTLIST", { p: e.curr, ParamData: tempindex.curKnowLedge, P2: tempindex.curType, level: tempindex.curLevel, tkid: tempindex.tkID, count: model.page.pagecount }, function (result) {
                                         if (result.ErrorMsg == "") {
                                             tempindex.TKSTData = result.Result;
                                         }
