--- a/FTWeb/ViewV5/AppPage/KSGL/KSAPLIST.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/KSAPLIST.html
@@ -1,10 +1,169 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
-</head>
-<body>
+﻿<div ms-controller="W_KSGL">
+    <!-- 添加按钮 -->
+    <div class="btn-add">
+        <button type="button" class="btn btn-info btn-lg" ms-if="type==0" ms-click="AddView('KSGL_KSAP')"><i class="iconfont icon-jiahao ft12 mr5"></i>添加考试安排</button>
+    </div>
+    <!-- 按条件选择 -->
+    <div class="tab-filter-type"> 
+        <!-- 搜索 -->
+        <div class="oh">
+            <div class="input-group ml15" style="width:295px;">
+                <input type="search" class="form-control" ms-duplex="search.searchcontent" placeholder="搜索考试安排名称">
+                <span class="input-group-addon" ms-click="GetLIST()">搜索</span>
+            </div>
+        </div>
+    </div>
+    <!-- 展开更多选项 -->
+    <div class="add-tab ft14 tc mt20" style="display:none;">
+        <span>更多筛选<i class="caret"></i></span>
+    </div>
+    <!-- 按条件选择 -->
+    <!-- 表格 -->
+    <div class="default-tab ft14 pt20 hover-btn">
+        <table class="table table-striped table-responsive table-hover">
+            <thead>
+                <tr>
+                    <th class="tc">
+                        考试安排名称
+                    </th>
+                    <th>考试时长</th>
+                    <th>可延长时间</th>
+                    <th>考试安排描述</th>
+                    <th>创建人</th>
+                    <th>创建时间</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ms-repeat-el="ListData"> 
+                    <td>{{el.KSName}}</td>
+                    <td>{{el.KSSC}}</td>
+                    <td>{{el.YCSY}}</td>
+                    <td>{{ComFunJS.convstr(el.Remark)}}</td>
+                    <td>{{ComFunJS.convertuser(el.CRUser) }}</td>
+                    <td>{{el.CRDate|date('yyyy-MM-dd')}}</td>
+                    <td>
+                        <span class="btn-click" ms-visible="type=='0'">
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-click="AddView('KSGL_KSAP','题库编辑',el.ID,$event)" ms-if="el.kszt==2">
+                                <i class="iconfont icon-bianji"></i>
+                            </a>
+                            <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-click="DELKJZZ(el,event)" ms-if="el.kszt==2">
+                                <i class="iconfont icon-shanchu"></i>
+                            </a>
+                        </span>
+                        <span class="btn-click" ms-visible="type=='2'">
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="查看成绩列表" ms-click="View(el.ID,1)" ms-if="el.Status==1">
+                                <i class="iconfont icon-look"></i>
+                            </a> 
+                        </span>
+                        <span class="btn-click" ms-visible="type=='1'">
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="阅卷" ms-click="View(el.ID,0)" ms-if="el.kszt==3&&el.Status!=1&&el.YJTeacher==userName">
+                                <i class="iconfont icon-look"></i>
+                            </a>
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="阅卷结束" ms-click="EndView(el)" ms-if="el.kszt==3&&el.Status!=1&&el.YJTeacher==userName">
+                                <i class="iconfont icon-look"></i>
+                            </a>
+                        </span>
+                    </td>
+                </tr>
 
-</body>
-</html>
+            </tbody>
+            <tfoot>
+                <tr ms-if="isnull"><td class="tc"></td><td>暂无数据</td></tr>
+            </tfoot>
+        </table>
+        <div class="ui-datatable-page ft14 pl20">
+
+            <div id="pageDiv" ms-visible="model.page.total>model.pageNum[0].num" class="pull-right"></div>
+            <div class="pull-right" ms-visible="ListData.size()!=0">
+                <span>共{{model.page.total}}条记录</span>
+                <span ms-visible="model.page.total>model.pageNum[0].num">
+                    选择每页条数
+                    <select style="height: 25px; width: 50px;" ms-change="selNum(this.value)" ms-duplex="model.page.pagecount">
+                        <option ms-repeat-pg="pageNum" ms-attr-value="pg.num" ms-attr-selected="pg.num==model.page.pagecount?'selected':''">{{pg.num}}</option>
+                    </select>
+                </span>
+            </div>
+
+        </div>
+    </div>
+
+
+</div>
+
+<script>
+    var tempindex = avalon.define({
+        $id: "W_KSGL",
+        userName: ComFunJS.getnowuser(),
+        type: "0",
+        InitWigetData: function (str) {
+            tempindex.type = str;
+            tempindex.GetLIST();
+        },
+        GetLIST: function () { 
+            $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETKSAPLIST', { p: 1, pagecount: model.page.pagecount, Content: model.search.SearchContent, P1: tempindex.type }, function (resultData) {
+                if (resultData.ErrorMsg == "") {
+                    model.ListData = resultData.Result;
+                    model.page.total = resultData.Result1;
+                    if (model.ListData.size() == 0) { model.isnull = true; } else { model.isnull = false; }
+                    laypage({
+                        cont: 'pageDiv', //容器。值支持id名、原生dom对象，jquery对象。
+                        pages: Math.ceil(parseInt(resultData.Result1) * 1.0 / 8), //通过后台拿到的总页数
+                        curr: 1, //初始化当前页
+                        skin: 'molv',
+                        jump: function (e) { //触发分页后的回调
+                            if (e.curr != model.page.pageindex) {
+                                $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETKSAPLIST', { p: e.curr, pagecount: model.page.pagecount, Content: model.search.SearchContent, P1: tempindex.type }, function (resultData) {
+                                    if (resultData.ErrorMsg == "") {
+                                        model.ListData = resultData.Result;
+                                    }
+                                })
+                                model.page.pageindex = e.curr;
+                            }
+                        }
+                    });
+                }
+            })
+        },
+        View: function (ID, status) {
+            model.initobj = { Id: ID ,stu:status};
+            model.PageCodeRdm = "/ViewV5/AppPage/KSGL/USERCJLIST.html?r=" + model.rdm; 
+        },
+        EndView: function (item) {
+
+            top.ComFunJS.winconfirm("确定要阅卷结束吗？", function () {
+                item.Status = 1;
+                $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_ADDKSAP', { P1: JSON.stringify(item.$model) }, function (result) {
+                    if (result.ErrorMsg == "") {
+                        top.ComFunJS.winsuccess("阅卷成功");
+                    } else {
+                        top.ComFunJS.winwarning(result.ErrorMsg);
+                    }
+                })
+            })
+        },
+        EditView: function (ID, event) {
+            if (event) {
+                event.stopPropagation();
+            }
+            top.ComFunJS.winviewform("/ViewV4/AppPage/APP_ADD_WF.html?FormCode=" + model.PathCode + "_" + model.FormCode + "&ID=" + ID, "修改表单", "1000", "");
+        },
+        DELKJZZ: function (item, event) {
+            if (event) {
+                event.stopPropagation();
+            }
+            top.ComFunJS.winconfirm("确认要删除此考试安排吗？", function () {
+                $.post('/API/VIEWAPI.ashx?Action=KSGL_DELKSAP', { "P1": item.ID }, function (result) {
+                    result = JSON.parse(result)
+                    if (result.ErrorMsg == "") {
+                        top.ComFunJS.winsuccess("删除成功");
+                        model.CommonData.remove(item);
+                    } else {
+                        top.ComFunJS.winwarning(result.ErrorMsg);
+                    }
+                })
+            }, function () { })
+        },
+    })
+
+
+</script>
