--- a/FTWeb/ViewV5/AppPage/KSGL/SJGLLIST.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/SJGLLIST.html
@@ -1,10 +1,181 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
-</head>
-<body>
+﻿<div ms-controller="W_SJGL">
+    <!-- 添加按钮 -->
+    <div class="btn-add">
+        <button type="button" class="btn btn-info btn-lg" ms-click="AddSJGL()"><i class="iconfont icon-jiahao ft12 mr5"></i>添加试卷</button>
+    </div>
+    <!-- 按条件选择 -->
+    <div class="tab-filter-type">
+        <div class="oh">
+            <h5 class="pull-left tr">试卷状态：</h5>
+            <ul class="tab-type ft14">
+                <li><span ms-class-1="active:sjzt==''" ms-click="SelectType4('')">全部</span></li>
+                <li><span ms-class-1="active:sjzt=='1'" ms-click="SelectType4('1')">已发布</span></li>
+                <li><span ms-class-1="active:sjzt=='0'" ms-click="SelectType4(0'')">未发布</span></li>
+            </ul>
+        </div>
+        <!-- 搜索 -->
+        <div class="oh">
+            <div class="input-group ml15" style="width:295px;">
+                <input type="search" class="form-control" ms-duplex="search.searchcontent" placeholder="搜索试卷名称">
+                <span class="input-group-addon" ms-click="GetLIST()">搜索</span>
+            </div>
+        </div>
+    </div>
+    <!-- 展开更多选项 -->
+    <div class="add-tab ft14 tc mt20" style="display:none;">
+        <span>更多筛选<i class="caret"></i></span>
+    </div>
+    <!-- 按条件选择 -->
+    <!-- 表格 -->
+    <div class="default-tab ft14 pt20 hover-btn">
+        <table class="table table-striped table-responsive table-hover">
+            <thead>
+                <tr>
+                    <th class="tc">
+                        试卷名称
+                    </th>
+                    <th>总分数</th>
+                    <th>及格分数</th>
+                    <th>试卷状态</th>
+                    <th>创建人</th>
+                    <th>创建时间</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ms-repeat-el="ListData">
+                    <td class="tc">
+                        {{$index+1+page.pagecount*(page.pageindex-1)}}
+                    </td>
+                    <td>{{el.SJName}}</td>
+                    <td>{{el.TotalRecord}}</td>
+                    <td>{{el.PassRecord}}</td>
+                    <td>{{tempindex.jszt(el.Status)}}</td>
+                    <td>{{ComFunJS.convertuser(el.CRUser) }}</td>
+                    <td>{{el.CRDate|date('yyyy-MM-dd')}}</td>
+                    <td>
+                        <span class="btn-click">
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-if="el.CRUser==userName" ms-click="EditSJGL(el.ID)">
+                                <i class="iconfont icon-bianji"></i>
+                            </a>
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="发布" ms-if="el.CRUser==userName" ms-click="KSRELEASE(el)">
+                                <i class="iconfont icon-fabu"></i>
+                            </a>
+                            <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-if="el.CRUser==userName&&el.Status!=1" ms-click="DeleteView(el,$event)">
+                                <i class="iconfont icon-shanchu"></i>
+                            </a>
+                        </span>
+                    </td>
+                </tr>
 
-</body>
-</html>
+            </tbody>
+            <tfoot>
+                <tr ms-if="isnull"><td class="tc"></td><td>暂无数据</td></tr>
+            </tfoot>
+        </table>
+        <div class="ui-datatable-page ft14 pl20">
+
+            <div id="pageDiv" ms-visible="model.page.total>model.pageNum[0].num" class="pull-right"></div>
+            <div class="pull-right" ms-visible="ListData.size()!=0">
+                <span>共{{model.page.total}}条记录</span>
+                <span ms-visible="model.page.total>model.pageNum[0].num">
+                    选择每页条数
+                    <select style="height: 25px; width: 50px;" ms-change="selNum(this.value)" ms-duplex="model.page.pagecount">
+                        <option ms-repeat-pg="pageNum" ms-attr-value="pg.num" ms-attr-selected="pg.num==model.page.pagecount?'selected':''">{{pg.num}}</option>
+                    </select>
+                </span>
+            </div>
+
+        </div>
+    </div>
+
+
+</div>
+
+<script>
+    var tempindex = avalon.define({
+        $id: "W_SJGL",
+        sjzt: "",
+        InitWigetData: function () {
+            tempindex.GetLIST();
+        },
+        seartype: "",
+        SelectType4: function (type) {
+            tempindex.sjzt = type;
+            tempindex.GetLIST();
+        },
+        GetLIST: function () {
+            $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETSJGLLIST', { p: 1, pagecount: model.page.pagecount, Content: model.search.searchContent, sjzt: tempindex.sjzt }, function (resultData) {
+                if (resultData.ErrorMsg == "") {
+                    model.ListData = resultData.Result;
+                    model.page.total = resultData.Result1;
+                    if (model.ListData.size() == 0) { model.isnull = true; } else { model.isnull = false; }
+                    laypage({
+                        cont: 'pageDiv', //容器。值支持id名、原生dom对象，jquery对象。
+                        pages: Math.ceil(parseInt(resultData.Result1) * 1.0 / model.page.pagecount), //通过后台拿到的总页数
+                        curr: 1, //初始化当前页
+                        skin: 'molv',
+                        jump: function (e) { //触发分页后的回调
+                            if (e.curr != model.page.pageindex) {
+                                $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETSJGLLIST', { p: e.curr, pagecount: model.page.pagecount, Content: model.search.searchContent, sjzt: tempindex.sjzt }, function (resultData) {
+                                    if (resultData.ErrorMsg == "") {
+                                        model.ListData = resultData.Result;
+                                    }
+                                })
+                                model.page.pageindex = e.curr;
+                            }
+                        }
+                    });
+                }
+            })
+        },
+        KSRELEASE: function (item) {
+            top.ComFunJS.winconfirm("发布后试卷信息将不能更改，确定要发布吗？", function () {
+                $.getJSON("/API/VIEWAPI.ashx?ACTION=KSGL_KSRELEASE", { P1: item.ID }, function (resultData) {
+                    if (resultData.ErrorMsg == "") {
+                        item.Status = resultData.Result.Status;
+                        top.ComFunJS.winsuccess("发布成功");
+                    }
+                    else {
+                        top.ComFunJS.winwarning(resultData.ErrorMsg);
+                    }
+                });
+            })
+        },
+        DeleteView: function (item, event) {
+            if (event.stopPropagation) {
+                event.stopPropagation();
+            }
+            if (item.Status == 1) {
+                top.ComFunJS.winwarning("此试卷已发布不能删除");
+                return;
+            }
+            top.ComFunJS.winconfirm("确认要删除此试卷吗?", function () {
+                $.post('/API/VIEWAPI.ashx?Action=KSGL_DELSJGL', { "P1": item.ID }, function (result) {
+                    result = JSON.parse(result)
+                    if (result.ErrorMsg == "") {
+                        top.ComFunJS.winsuccess("删除成功");
+                        model.ListData.remove(item);
+                    } else {
+                        top.ComFunJS.winwarning(result.ErrorMsg);
+                    }
+                })
+            }, function () { })
+        }, AddSJGL: function () {
+            model.PageCodeRdm = "AppPage/KSGL/SJGL.html?r=" + model.rdm;
+        }, EditSJGL: function (id) {
+            model.initobj = { sjId: id, kcId: "" };
+            model.PageCodeRdm = "AppPage/KSGL/SJGL.html?r=" + model.rdm;
+        }, jszt: function (type) {
+            var statusName = "";
+            if (type == 1) {
+                statusName = "已发布";
+            }
+            else {
+                statusName = "未发布";
+            }
+            return statusName;
+        }
+    })
+
+
+</script>
