--- a/FTWeb/ViewV5/AppPage/KSGL/USERCJLIST.html
+++ b/FTWeb/ViewV5/AppPage/KSGL/USERCJLIST.html
@@ -1,10 +1,79 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
-</head>
-<body>
+﻿<div ms-controller="W_KSUSERGL" class="nav-right" style="margin-left: 0">
+    <ul class="list-top clearfix">
+        <li class="list-tit" ms-class-1="active:search.seartype==1">
+            考试人员
+        </li>
+    </ul>
+    <div class="right-box">
+        <table class="ui-datatable table-hover table-responsive table-striped">
+            <thead>
+                <tr>
+                    <th style="text-align: center">&nbsp;</th>
+                    <th>姓名</th>
+                    <th>分数</th>
+                    <th>是否及格</th>
+                    <th>是否交卷</th>
+                    <th>阅卷老师</th>
+                    <th style="width: 40px" ms-visible="stu!=1">
+                        操作
+                    <th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ms-repeat-item="CommonData">
+                    <td class="text-center">&nbsp;</td>
+                    <td>{{ComFunJS.convertuser(item.CRUser)}}</td>
+                    <td>{{item.Record}}</td>
+                    <td>{{item.Record>item.PassRecord?"及格":"不及格"}}</td>
+                    <td>{{item.ISJJ==1?"是":"否"}}</td>
+                    <td>{{ComFunJS.convertuser(item.YJTeacher)}}</td>
+                    <td ms-visible="stu!=1">
+                        <button type="button" class="btn btn-default btn-sm btn-tm btn-rid0" ms-click="DFView(item.KSAPID,item.CRUser)" ms-if="stu!=1"><i class="fa fa-edit"></i>阅卷打分</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 
-</body>
-</html>
+<script>
+    var tempindex = avalon.define({
+        $id: "W_KSUSERGL",
+        InitWigetData: function (data) {
+            tempindex.KSAPID = data.Id;
+            tempindex.stu = data.stu;
+            tempindex.GetLIST();
+        },
+        KSAPID:"",
+        stu: "",
+        GetLIST: function () {
+            $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETKSUSER', { p: tempindex.page, P1: tempindex.KSAPID, Content: model.search.SearchContent }, function (resultData) {
+                if (resultData.ErrorMsg == "") {
+                    model.CommonData = resultData.Result;
+                    model.Total = resultData.Result1;
+                    laypage({
+                        cont: 'pageDiv', //容器。值支持id名、原生dom对象，jquery对象。
+                        pages: Math.ceil(parseInt(resultData.Result1) * 1.0 / 8), //通过后台拿到的总页数
+                        curr: 1, //初始化当前页
+                        skin: 'molv',
+                        jump: function (e) { //触发分页后的回调
+                            if (e.curr != model.page) {
+                                $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETKSUSER', { p: e.curr, P1: tempindex.KSAPID, Content: model.search.SearchContent, }, function (resultData) {
+                                    if (resultData.ErrorMsg == "") {
+                                        model.CommonData = resultData.Result;
+                                    }
+                                })
+                                model.page = e.curr;
+                            }
+                        }
+                    });
+                }
+            })
+        },
+        DFView: function (KSAPID, UserName) {
+            top.ComFunJS.winviewform("/ViewV4/AppPage/KSGL/USERKSDA.html?ID=" + KSAPID + "&&USER=" + UserName, "试卷", "1000", "");
+        }, 
+    })
+
+
+</script>
