--- a/FTWeb/View_Mobile/UI/BASE/APP_MOBIL_WF.html
+++ b/FTWeb/View_Mobile/UI/BASE/APP_MOBIL_WF.html
@@ -423,8 +423,9 @@
         avalon.ready(function () {
             pmodel.isPC = false;
             ComFunJS.initwxConfig();
-
+            ComFunJS.initsetajax();
         })
+
     </script>
 </body>
 </html>
