--- a/FTWeb/ViewV5/AppPage/XTGL/XTRZLIST.html
+++ b/FTWeb/ViewV5/AppPage/XTGL/XTRZLIST.html
@@ -1,4 +1,7 @@
 ﻿<div ms-controller="XTRZLIST">    
+    <div class="btn-add">
+        <button type="button" class="btn btn-danger btn-lg" ms-click="DelPL()"><i class="iconfont icon-shanchu ft12 mr5"></i>删除</button>
+    </div>
     <!-- 按条件选择 -->
     <div class="tab-filter-type">  
         <div class="oh">
@@ -26,8 +29,11 @@
         <table class="table table-striped table-responsive table-hover">
             <thead>
                 <tr>
-                    <th class="tc">
-                    
+                    <th class="tc" style="width:50px;">
+                        <div class="icheckbox_square-blue">
+                            <input type="checkbox">
+                            <span class="iconfont icon-check ft12"></span>
+                        </div>
                     </th>
                     <th ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{im.ColText}}</th> 
                 </tr>
@@ -35,9 +41,17 @@
             <tbody>
                 <tr ms-repeat-el="ListData" >
                     <td class="tc">
-                       
+                        <div class="icheckbox_square-blue" ms-attr-id="el.ID">
+                            <input type="checkbox">
+                            <span class="iconfont icon-check ft12"></span>
+                        </div>
                     </td>
-                    <td ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{FnFormat(el[im.ColName],im)|html}}</td>                   
+                    <td ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{FnFormat(el[im.ColName],im)|html}}</td>
+                    <td style="min-width:100px;">
+                        <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-click="Del(el,$event)">
+                            <i class="iconfont icon-shanchu"></i>
+                        </a>
+                    </td>          
                 </tr>
 
             </tbody>
@@ -89,6 +103,7 @@
         },
 
         GetLIST: function () {
+            $(".checked").removeClass("checked");
             model.page.pageindex = 1;
             model.ListData.clear();
             $.getJSON('/API/VIEWAPI.ashx?Action=XTGL_GETXTRZ', { P1: model.search.seartype, p: 1, Content: model.search.searchcontent, pagecount: model.page.pagecount}, function (resultData) {
@@ -116,19 +131,37 @@
 
             })
         },
-        Del: function (ForCode, el, event) {
+        Del: function (el, event) {
             if (event) {
                 event.stopPropagation();
             }
             ComFunJS.winconfirm("确认要删除吗？", function () {
-                $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_DELXTRZ", { P1: el.ID }, function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_DELXTRZ", {P1:"1", P2: el.ID }, function (r) {
                     if (r.ErrorMsg == "") {
                         model.ListData.remove(el);
                         ComFunJS.winsuccess("操作成功");
                     }
                 })
             }, function () { })
-
+        },
+        DelPL: function () {
+            var Ids = "";
+            $("tbody .checked").each(function () {
+                Ids += $(this).prop("id") + ",";
+            })
+            Ids = Ids.length > 1 ? Ids.substring(0, Ids.length - 1) : Ids;
+            if (!Ids) {
+                top.ComFunJS.winwarning("请选择要删除的消息"); //如果是标记本页状态，消息数量必须大于0
+                return;
+            }
+            ComFunJS.winconfirm("确认要删除" + Ids.split(',').length + "条消息吗？", function () {
+                $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_DELXTRZ", { P1: "2", P2: Ids }, function (r) {
+                    if (r.ErrorMsg == "") {
+                        tempindex.GetLIST();
+                        ComFunJS.winsuccess("操作成功");
+                    }
+                })
+            }, function () { })
         }
     })
     //@ sourceURL=XTRZLIST.js;
