--- a/FTWeb/View_Mobile/UI/UI_TSSQ_INDEX.html
+++ b/FTWeb/View_Mobile/UI/UI_TSSQ_INDEX.html
@@ -259,15 +259,10 @@
             },
             pl: function (el) {
                 ComFunJS.showCommentNew(function (result) {
-                    $.showPreloader("保存中");
                     $.getJSON('/API/WXAPI.ashx?Action=XTGL_ADDCOMENT&r=' + Math.random(), { "P1": result.comment, "Points": result.point, "MsgType": "TSSQ", "MsgLYID": el.ID }, function (resultData) {
-                        $.hidePreloader();
                         if (resultData.ErrorMsg == "") {
                             el.PLList.push(resultData.Result);
-                            $.toast("评论成功");
-                        }
-                        else {
-                            $.toast("评论失败");
+                            ComFunJS.winsuccess("评论成功");
                         }
                     })
 
@@ -275,15 +270,12 @@
             },
             hf: function (el,pl) {
                 ComFunJS.showCommentNew(function (result) {
-                    $.showPreloader("保存中");
+
                     $.getJSON('/API/WXAPI.ashx?Action=TSSQ_ADDCOMENT&r=' + Math.random(), { "P1": result.comment, "TLID": pl.ID, "MsgLYID": el.ID }, function (resultData) {
-                        $.hidePreloader();
+
                         if (resultData.ErrorMsg == "") {
                             el.PLList.push(resultData.Result);
-                            $.toast("评论成功");
-                        }
-                        else {
-                            $.toast("评论失败");
+                            ComFunJS.winsuccess("评论成功");
                         }
                     })
 
@@ -306,9 +298,6 @@
                             })
                             el.IsZan = "N";
                         }
-                        else {
-                            ComFunJS.winwarning(result.ErrorMsg);
-                        }
                     }
                 })
 
@@ -324,16 +313,13 @@
             },
             DELHT: function (item) {
                 $.confirm('确认要删除吗？', function () {
-                    $.post('/API/WXAPI.ashx?Action=TSSQ_DELHTBYID', { "P1": item.ID }, function (result) {
-                        result = JSON.parse(result)
+                    $.getJSON('/API/WXAPI.ashx?Action=TSSQ_DELHTBYID', { "P1": item.ID }, function (result) {
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
                             model.ctData.remove(item);
                             if (model.ctData.size() == 0) {
                                 model.loadtip = '没有找到数据哦'
                             }
-                        } else {
-                            ComFunJS.winwarning(result.ErrorMsg);
                         }
                     })
                 })
