--- a/FTWeb/View_Mobile/UI/UI_TSSQ_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_TSSQ_LIST.html
@@ -310,15 +310,12 @@
             },
             hf: function (el, pl) {
                 ComFunJS.showCommentNew(function (result) {
-                    $.showPreloader("保存中");
+
                     $.getJSON('/API/WXAPI.ashx?Action=TSSQ_ADDCOMENT&r=' + Math.random(), { "P1": result.comment, "TLID": pl.ID, "MsgLYID": el.ID }, function (resultData) {
-                        $.hidePreloader();
+
                         if (resultData.ErrorMsg == "") {
                             el.PLList.push(resultData.Result);
-                            $.toast("评论成功");
-                        }
-                        else {
-                            $.toast("评论失败");
+                            ComFunJS.winsuccess("评论成功");
                         }
                     })
 
@@ -340,9 +337,6 @@
                                 }
                             })
                             el.IsZan = "N";
-                        }
-                        else {
-                            ComFunJS.winwarning(result.ErrorMsg);
                         }
                     }
                 })
@@ -369,9 +363,7 @@
                             if (model.ctData.size() == 0) {
                                 model.loadtip = '没有找到数据哦'
                             }
-                        } else {
-                            ComFunJS.winwarning(result.ErrorMsg);
-                        }
+                        } 
                     })
                 })
             },
